# quackhouse

./: :w  LICENSE  README.md  index.html  notes.md  package-lock.json  package.json  test.json
.github/workflows/: static.yml
frontend/: README.md  contextmenu.html  index.html  package-lock.json  package.json  test.html  tsconfig.json  vite.config.ts
frontend/public/wasm/: package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
frontend/src/scripts/: duckdb.ts  duckdb_wrapper.ts  main.ts  model_visualiser.ts  semantic_layer.ts
frontend/src/styles/: gridjs.css  pico.css  style.css
src/scripts/: duckdb.ts
src/styles/: style.css
test_data/: Sales.csv  result.xlsx
wasm/: .gitignore  Cargo.toml  LICENSE_MIT  build.zsh
wasm/src/: data_model.rs  lib.rs  model_wrapper.rs  query_builder.rs  semantic_model.rs  statics.rs
