[package]
name = "wasm"
version = "0.1.0"
authors = ["Dilovan Celik <dilovan@celikconsulting.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde-wasm-bindgen = "=0.6.5"
uuid = { version = "1.11.0", features = ["v4"] }
getrandom = { version = "0.2.15", features = ["js"] }


[dependencies.web-sys]
version = "0.3.72"
features = ["console", "Storage"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
